--- a/sections/about.html
+++ b/sections/about.html
@@ -34,10 +34,10 @@
                         <a href="#productos" class="navbar-link" data-nav-link>Productos</a>
                         <div class="sub-links">
                             <ul>
-                                <li><a href="../sections/promos.html">Promos de hamburguesas y panchos</a></li>
+                                <li><a href="../sections/promos.html">Promociones</a></li>
                                 <li><a href="../sections/bebidas.html">Bebidas</a></li>
                                 <li><a href="../sections/saladitos.html">Saladitos</a></li>
-                                <li><a href="../sections/varios.html">Varios</a></li>
+                                <li><a href="../sections/varios.html">Hamburguesas y panchos</a></li>
                             </ul>
                         </div>
                     </li>
