--- a/sections/form-pago.html
+++ b/sections/form-pago.html
@@ -33,10 +33,10 @@
                         <a href="#productos" class="navbar-link" data-nav-link>Productos</a>
                         <div class="sub-links">
                             <ul>
-                                <li><a href="../sections/promos.html">Promos de hamburguesas y panchos</a></li>
+                                <li><a href="../sections/promos.html">Promociones</a></li>
                                 <li><a href="../sections/bebidas.html">Bebidas</a></li>
                                 <li><a href="../sections/saladitos.html">Saladitos</a></li>
-                                <li><a href="../sections/varios.html">Varios</a></li>
+                                <li><a href="../sections/varios.html">Hamburguesas y panchos</a></li>
                             </ul>
                         </div>
                     </li>
@@ -93,10 +93,10 @@
           <!-- Selección del método de pago (REQ-7.2) -->
           <h3 class="h3-pago">Método de Pago</h3>
           <form id="metodo-pago-form" method="POST">
-              <div>
+              <!-- <div>
                   <input type="radio" id="tarjeta" name="metodo_pago" value="tarjeta" required>
                   <label for="tarjeta">Tarjeta de Crédito</label>
-              </div>
+              </div> -->
               <div>
                   <input type="radio" id="mercadopago" name="metodo_pago" value="mercadopago">
                   <label for="mercadopago">MercadoPago</label>
