--- a/sections/varios.html
+++ b/sections/varios.html
@@ -25,7 +25,7 @@
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
                     <li class="nav-item">
-                        <a href="../index.html" class="navbar-link" data-nav-link>Inicio</a>
+                        <a href="../sections/index.html" class="navbar-link" data-nav-link>Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a href="../sections/about.html" class="navbar-link" data-nav-link>Sobre Nosotros</a>
@@ -34,10 +34,10 @@
                         <a href="#productos" class="navbar-link" data-nav-link>Productos</a>
                         <div class="sub-links">
                             <ul>
-                              <li><a href="../sections/promos.html">Promos de hamburguesas y panchos</a></li>
+                              <li><a href="../sections/promos.html">Promociones</a></li>
                               <li><a href="../sections/bebidas.html">Bebidas</a></li>
                               <li><a href="../sections/saladitos.html">Saladitos</a></li>
-                              <li><a href="../sections/varios.html">Varios</a></li>
+                              <li><a href="../sections/varios.html">Hamburguesas y panchos</a></li>
                             </ul>
                         </div>
                     </li>
@@ -54,7 +54,7 @@
 
                     </li>
                     <li class="nav-item">
-                        <a href="#cart" class="navbar-link" id="cart">
+                        <a href="../sections/cartShop.html" class="navbar-link" id="cart">
                             <ion-icon name="cart-outline"></ion-icon>
                         </a>
                     </li>
