--- a/sections/contact.html
+++ b/sections/contact.html
@@ -29,16 +29,16 @@
                         <a href="../sections/index.html" class="navbar-link" data-nav-link>Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#nosotros" class="navbar-link" data-nav-link>Sobre Nosotros</a>
+                        <a href="../sections/about.html" class="navbar-link" data-nav-link>Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#productos" class="navbar-link" data-nav-link>Productos</a>
+                        <a href="#" class="navbar-link" data-nav-link>Productos</a>
                         <div class="sub-links">
                             <ul>
-                              <li><a href="../sections/promos.html">Promos de hamburguesas y panchos</a></li>
+                              <li><a href="../sections/promos.html">Promociones</a></li>
                               <li><a href="../sections/bebidas.html">Bebidas</a></li>
                               <li><a href="../sections/saladitos.html">Saladitos</a></li>
-                              <li><a href="../sections/varios.html">Varios</a></li>
+                              <li><a href="../sections/varios.html">Hamburguesas y panchos</a></li>
                             </ul>
                         </div>
                     </li>
